changes during making the test for aPISets.js:
> changed sets.GetIDSet to reject sets IDs that do not exist. Then added that code to other aPISet functiosn that also needed it.

> in sets.PostIDSetReview, added "await" keyword to prevent collection of a promise. Also changed "author" to  "info.author". Also changed a '500' code to '422'.

> corrected typos in 'GetIDSetCards' function

So I done the test for Sets API and fix the lack of CSS in the client collection and set view pages.
